--- a/3.JavaMultithreading/pom.xml
+++ b/3.JavaMultithreading/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
