--- a/3.JavaMultithreading/pom.xml
+++ b/3.JavaMultithreading/pom.xml
@@ -38,6 +38,18 @@
             <version>4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core-jakarta</artifactId>
+            <version>5.6.11.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
